--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gatsby": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-netlify-forms": "^1.3.3",
+    "react-router-dom": "^7.0.1",
     "uri-js": "^4.4.1"
   },
   "devDependencies": {
