--- a/package.json
+++ b/package.json
@@ -15,20 +15,32 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@skagami/gatsby-plugin-dark-mode": "^2.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "ajv": "^8.17.1",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "gatsby": "^5.14.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-netlify-forms": "^1.3.3",
     "react-router-dom": "^7.0.1",
+    "stein-js-client": "^0.0.2",
     "uri-js": "^4.4.1"
   },
   "devDependencies": {
