--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gatsby-cli": "^5.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
